loadbalancer/IngressRoute-zigbee2mqtt-dashboard-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zigbee2mqtt-dashboard-route
  namespace: loadbalancer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`zigbee.anderwerse.de`)
      services:
        - name: zigbee2mqtt
          namespace: homeassistant
          port: 8080
  tls:
    secretName: anderwersede-tls-certificate
